--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "01tut",
   "version": "0.1.0",
+  "homepage": "https://sdaoud980.github.io/react-tut",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "react-icons": "^5.5.0"
   }
 }
